streamit: Add build support for Stream-It board

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -1,4 +1,15 @@
 # SPDX-License-Identifier: GPL-2.0
+#--------------------------------------------
+# Renesas RZ/A Boards
+#--------------------------------------------
+dtb-y += r7s72100-streamit.dtb
+
+#--------------------------------------------
+# Custom RZ/A Boards
+# Enter your custom board files below this line (to avoid merge conflicts)
+#---------------------------------------------
+
+
 dtb-$(CONFIG_ARCH_ALPINE) += \
 	alpine-db.dtb
 dtb-$(CONFIG_MACH_ARTPEC6) += \
