--- a/arch/arm/boot/dts/r7s72100-rskrza1.dts
+++ b/arch/arm/boot/dts/r7s72100-rskrza1.dts
@@ -19,7 +19,7 @@
 	};
 
 	chosen {
-		bootargs = "ignore_loglevel earlyprintk earlycon=scif,0xE8008000 root=/dev/mtdblock0                                              ";
+		bootargs = "ignore_loglevel earlyprintk earlycon root=/dev/mtdblock0                                              ";
 		stdout-path = "serial0:115200n8";
 	};
 
