pinctrl: update RZ/A2 driver
Update the existing driver to match upstream version.

--- a/drivers/pinctrl/Kconfig
+++ b/drivers/pinctrl/Kconfig
@@ -204,7 +204,7 @@ config PINCTRL_RZA2
 	select GENERIC_PINMUX_FUNCTIONS
 	select GENERIC_PINCONF
 	help
-	  This selects pinctrl driver for Renesas RZ/A2 platforms.
+	  This selects GPIO and pinctrl driver for Renesas RZ/A2 platforms.
 
 config PINCTRL_SINGLE
 	tristate "One-register-per-pin type device tree based pinctrl driver"
