--- a/arch/arm/boot/dts/r7s9210.dtsi
+++ b/arch/arm/boot/dts/r7s9210.dtsi
@@ -12,6 +12,9 @@
 #include <dt-bindings/interrupt-controller/irq.h>
 #include <dt-bindings/clock/r7s9210-cpg-mssr.h>
 
+#define RZADMA_SLAVE_RSPI0_TX 1
+#define RZADMA_SLAVE_RSPI0_RX 2
+
 / {
 	compatible = "renesas,r7s9210";
 	interrupt-parent = <&gic>;
@@ -394,6 +397,36 @@
 		cap-sd-highspeed;
 		cap-sdio-irq;
 		status = "disabled";
+	};
+
+	dma0: dma-controller@e8220000 {
+		compatible = "renesas,rza-dma";
+		reg = <0xe8220000 0x720>,
+			  <0xfcfe1000 0x20>;
+		interrupts = <GIC_SPI 13 IRQ_TYPE_LEVEL_HIGH>,
+					 <GIC_SPI 14 IRQ_TYPE_LEVEL_HIGH>,
+					 <GIC_SPI 15 IRQ_TYPE_LEVEL_HIGH>,
+					 <GIC_SPI 16 IRQ_TYPE_LEVEL_HIGH>,
+					 <GIC_SPI 17 IRQ_TYPE_LEVEL_HIGH>,
+					 <GIC_SPI 18 IRQ_TYPE_LEVEL_HIGH>,
+					 <GIC_SPI 19 IRQ_TYPE_LEVEL_HIGH>,
+					 <GIC_SPI 20 IRQ_TYPE_LEVEL_HIGH>,
+					 <GIC_SPI 21 IRQ_TYPE_LEVEL_HIGH>,
+					 <GIC_SPI 22 IRQ_TYPE_LEVEL_HIGH>,
+					 <GIC_SPI 23 IRQ_TYPE_LEVEL_HIGH>,
+					 <GIC_SPI 24 IRQ_TYPE_LEVEL_HIGH>,
+					 <GIC_SPI 25 IRQ_TYPE_LEVEL_HIGH>,
+					 <GIC_SPI 26 IRQ_TYPE_LEVEL_HIGH>,
+					 <GIC_SPI 27 IRQ_TYPE_LEVEL_HIGH>,
+					 <GIC_SPI 28 IRQ_TYPE_LEVEL_HIGH>,
+					 <GIC_SPI 29 IRQ_TYPE_LEVEL_HIGH>;
+		interrupt-names = "ch0", "ch1", "ch2", "ch3",
+						  "ch4", "ch5", "ch6", "ch7",
+						  "ch8", "ch9", "ch10", "ch11",
+						  "ch12", "ch13", "ch14", "ch15",
+						  "error";
+		dma-channels = <16>;
+		#dma-cells = <1>;
 	};
 
 	/**** non-upstream drivers ****/
